testing profile picture

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
             <img
-              src="./assets/png/me.png"
+              src="./assets/png/john-doe.png"
               alt="Ram Maheshwari Logo Image"
               class="header__logo-img"
             />
@@ -86,9 +86,7 @@
       <div class="home-hero__content">
         <h1 class="heading-primary">Hello world, I'm Matt Hoadley</h1>
         <div class="home-hero__info">
-          <p class="text-primary">
-            and I'm a Full-Stack Software Developer.
-          </p>
+          <p class="text-primary">and I'm a Full-Stack Software Developer.</p>
         </div>
         <div class="home-hero__cta">
           <a href="./#projects" class="btn btn--bg">Projects</a>
