--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">Matt Hoadley</span>
+          <span class="header__logo-sub">Matt Hoad</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
