--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
             <img
-              src="./assets/png/john-doe.png"
+              src="./assets/png/me.png"
               alt="Ram Maheshwari Logo Image"
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">Matt Hoad</span>
+          <span class="header__logo-sub">Matt Hoadley</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
@@ -86,7 +86,9 @@
       <div class="home-hero__content">
         <h1 class="heading-primary">Hello world, I'm Matt Hoadley</h1>
         <div class="home-hero__info">
-          <p class="text-primary">and I'm a Full-Stack Software Developer.</p>
+          <p class="text-primary">
+            and I'm a Full-Stack Software Developer.
+          </p>
         </div>
         <div class="home-hero__cta">
           <a href="./#projects" class="btn btn--bg">Projects</a>
