fixing project pictures

--- a/index.html
+++ b/index.html
@@ -188,14 +188,15 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            Here are just a few of the projects that I've been putting my time and effort into.
+            Here are just a few of the projects that I've been putting my time
+            and effort into.
           </span>
         </h2>
         <div class="projects__content">
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/png/Via-V3.png"
+                src="./assets/png/Via.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -219,7 +220,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/Autohub-V3.jpg"
+                src="./assets/png/Autohub.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -248,7 +249,8 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main heading-sec__main--lt">Contact</span>
           <span class="heading-sec__sub heading-sec__sub--lt">
-            Feel free to reach out for any questions or opportunities or just to connect.
+            Feel free to reach out for any questions or opportunities or just to
+            connect.
           </span>
         </h2>
         <div class="contact__form-container">
