partial fix to project pages and index.html

--- a/index.html
+++ b/index.html
@@ -143,19 +143,18 @@
             <div class="about__content-details">
               <p class="about__content-details-para">
                 Hey! It's
-                <strong>John Doe</strong>
-                and I'm a <strong> Frontend Web Developer </strong> located in
-                Los Angeles. I've done
+                <strong>Matt Hoadley</strong>,
+                a <strong> Full-Stack Software Developer </strong> and US Marine located in
+                Holland, MI. I've done
                 <strong> remote </strong>
-                projects for agencies, consulted for startups, and collaborated
-                with talented people to create
+                projects for agencies, volunteered with non-profits, and collaborated
+                with talented people all over the globe to create
                 <strong>digital products </strong>
                 for both business and consumer use.
               </p>
               <p class="about__content-details-para">
-                I'm a bit of a digital product junky. Over the years, I've used
-                hundreds of web and mobile apps in different industries and
-                verticals. Feel free to
+                I'm a self-proclaimed tech nerd and video game junkie. Over the years, I've probably played thousands of games and experimented with
+                as many web and mobile apps in different industries. Feel free to
                 <strong>contact</strong> me here.
               </p>
             </div>
@@ -166,18 +165,24 @@
           <div class="about__content-skills">
             <h3 class="about__content-title">My Skills</h3>
             <div class="skills">
+              <div class="skills__skill">JavaScript</div>
+              <div class="skills__skill">Python</div>
+              <div class="skills__skill">React</div>
+              <div class="skills__skill">Django</div>
+              <div class="skills__skill">FastAPI</div>
               <div class="skills__skill">HTML</div>
               <div class="skills__skill">CSS</div>
-              <div class="skills__skill">JavaScript</div>
-              <div class="skills__skill">React</div>
               <div class="skills__skill">SASS</div>
-              <div class="skills__skill">GIT</div>
-              <div class="skills__skill">Shopify</div>
+              <div class="skills__skill">Git</div>
               <div class="skills__skill">Wordpress</div>
-              <div class="skills__skill">Google ADS</div>
+              <div class="skills__skill">Amazon AWS</div>
               <div class="skills__skill">Facebook Ads</div>
-              <div class="skills__skill">Android</div>
-              <div class="skills__skill">IOS</div>
+              <div class="skills__skill">PostgreSQL</div>
+              <div class="skills__skill">MongoDB</div>
+              <div class="skills__skill">MySQL</div>
+              <div class="skills__skill">Docker</div>
+              <div class="skills__skill">Unit Testing</div>
+              <div class="skills__skill">Bootstrap</div>
             </div>
           </div>
         </div>
@@ -188,7 +193,7 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            Here are just a few of the projects that I've been putting my time
+            Here is just a sample of the projects that I've been putting my time
             and effort into.
           </span>
         </h2>
