updates footer of  project pages and index.html

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 
         <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
         <div class="main-footer__lower">
-          &copy; Copyright 2023. Created by Matt Hoadley. Credit to
+          &copy; Copyright 2023. Property of Matt Hoadley. Credit to
           <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
             >Ram Maheshwari</a
           >
