--- a/project-1.html
+++ b/project-1.html
@@ -190,7 +190,7 @@
         </div>
 
         <div class="main-footer__lower">
-          &copy; Copyright 2023. Created by Matt Hoadley. Credit to
+          &copy; Copyright 2023. Property of Matt Hoadley. Credit to
           <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
             >Ram Maheshwari</a
           >
