--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Hoadfolio</title>
-    <meta name="description" content="Portfolio Template for Developer" />
+    <meta name="description" content="Matt Hoadley's portfolio" />
 
     <link rel="stylesheet" href="css/style.css" />
 
