updates about me, project blurbs, adds project tech stack, removes extra images

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
             <img
-              src="./assets/png/Me.png"
+              src="./assets/png/Me-grayv2.png"
               alt="Matt Hoadley Logo Image"
               class="header__logo-img"
             />
@@ -133,8 +133,7 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            Here's a little bit about me and my background.
           </span>
         </h2>
         <div class="about__content">
@@ -142,19 +141,23 @@
             <h3 class="about__content-title">Get to know me!</h3>
             <div class="about__content-details">
               <p class="about__content-details-para">
-                Hey! It's
-                <strong>Matt Hoadley</strong>,
-                a <strong> Full-Stack Software Developer </strong> and US Marine located in
-                Holland, MI. I've done
+                Hey guys! It's
+                <strong>Matt Hoadley</strong>, a
+                <strong> Full-Stack Software Developer </strong> and US Marine
+                located in Holland, MI. I have a passion for traveling and learning new things
+                and am currently halfway through a masters degree in
+                cybersecurity. I've done
                 <strong> remote </strong>
-                projects for agencies, volunteered with non-profits, and collaborated
-                with talented people all over the globe to create
+                solo and team projects for various agencies, volunteered with non-profits, and
+                collaborated with talented people all over the globe to create
                 <strong>digital products </strong>
                 for both business and consumer use.
               </p>
               <p class="about__content-details-para">
-                I'm a self-proclaimed tech nerd and video game junkie. Over the years, I've probably played thousands of games and experimented with
-                as many web and mobile apps in different industries. Feel free to
+                Another thing about me is that I'm a self-proclaimed tech nerd
+                and video game junkie. Over the years, I've probably played
+                thousands of games and experimented with as many web and mobile
+                apps in different industries. Feel free to
                 <strong>contact</strong> me here.
               </p>
             </div>
@@ -210,15 +213,34 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Via</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Via is a live social media platform for sharing photos taken
+                with loved ones. Users can upload photos, input location
+                information, and access a global view to see their photos based
+                on where they took them. Via was developed as a 4-person
+                programming team.
               </p>
+              <div class="about__content-skills">
+                <h3 class="about__content-title">Tech Stack</h3>
+                <div class="skills">
+                  <div class="skills__skill">JavaScript</div>
+                  <div class="skills__skill">Python</div>
+                  <div class="skills__skill">React</div>
+                  <div class="skills__skill">FastAPI</div>
+                  <div class="skills__skill">HTML</div>
+                  <div class="skills__skill">CSS</div>
+                  <div class="skills__skill">Git</div>
+                  <div class="skills__skill">Amazon AWS</div>
+                  <div class="skills__skill">Google Maps API</div>
+                  <div class="skills__skill">MongoDB</div>
+                  <div class="skills__skill">Docker</div>
+                  <div class="skills__skill">Bootstrap</div>
+                </div>
+              </div>
               <a
-                href="./project-1.html"
+                href="https://destination-dev.gitlab.io/module3-project-gamma/"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >See Via Live!</a
               >
             </div>
           </div>
@@ -234,15 +256,31 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Auto-Hub</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Auto Hub is a complete web application for auto dealership
+                management, including inventory, sales, and maintenance
+                management. Auto-Hub was developed as a 2-person pair
+                programming team.
               </p>
+              <div class="about__content-skills">
+                <h3 class="about__content-title">Tech Stack</h3>
+                <div class="skills">
+                  <div class="skills__skill">JavaScript</div>
+                  <div class="skills__skill">Python</div>
+                  <div class="skills__skill">React</div>
+                  <div class="skills__skill">Django</div>
+                  <div class="skills__skill">HTML</div>
+                  <div class="skills__skill">CSS</div>
+                  <div class="skills__skill">Git</div>
+                  <div class="skills__skill">PostgreSQL</div>
+                  <div class="skills__skill">Docker</div>
+                  <div class="skills__skill">Bootstrap</div>
+                </div>
+              </div>
               <a
-                href="./project-2.html"
+                href="https://github.com/mhz1990/Auto-Hub"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >View Auto-Hub Github</a
               >
             </div>
           </div>
@@ -335,8 +373,7 @@
           <div class="main-footer__row main-footer__row-2">
             <h4 class="heading heading-sm text-lt">Matt Hoadley</h4>
             <p class="main-footer__short-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
-              tempora explicabo quae quod deserunt
+              Software Developer | US Marine
             </p>
           </div>
         </div>
