--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
-            Here's a little bit about me and my background.
+            Here's a bit about me and my background.
           </span>
         </h2>
         <div class="about__content">
@@ -144,12 +144,13 @@
                 Hey guys! It's
                 <strong>Matt Hoadley</strong>, a
                 <strong> Full-Stack Software Developer </strong> and US Marine
-                located in Holland, MI. I have a passion for traveling and learning new things
-                and am currently halfway through a masters degree in
-                cybersecurity. I've done
+                located in Holland, MI. I have a passion for traveling and
+                learning new things and am currently halfway through a masters
+                degree in cybersecurity. I've done
                 <strong> remote </strong>
-                solo and team projects for various agencies, volunteered with non-profits, and
-                collaborated with talented people all over the globe to create
+                solo and team projects for various agencies, volunteered with
+                non-profits, and collaborated with talented people all over the
+                globe to create
                 <strong>digital products </strong>
                 for both business and consumer use.
               </p>
@@ -173,19 +174,23 @@
               <div class="skills__skill">React</div>
               <div class="skills__skill">Django</div>
               <div class="skills__skill">FastAPI</div>
+              <div class="skills__skill">Redux</div>
+              <div class="skills__skill">Node.js</div>
               <div class="skills__skill">HTML</div>
               <div class="skills__skill">CSS</div>
-              <div class="skills__skill">SASS</div>
               <div class="skills__skill">Git</div>
-              <div class="skills__skill">Wordpress</div>
               <div class="skills__skill">Amazon AWS</div>
-              <div class="skills__skill">Facebook Ads</div>
+              <div class="skills__skill">Google Maps API</div>
               <div class="skills__skill">PostgreSQL</div>
               <div class="skills__skill">MongoDB</div>
               <div class="skills__skill">MySQL</div>
               <div class="skills__skill">Docker</div>
-              <div class="skills__skill">Unit Testing</div>
               <div class="skills__skill">Bootstrap</div>
+              <div class="skills__skill">SASS</div>
+              <div class="skills__skill">Wordpress</div>
+              <div class="skills__skill">CI/CD</div>
+              <div class="skills__skill">Agile</div>
+              <div class="skills__skill">Unit Testing</div>
             </div>
           </div>
         </div>
