fixes dead social links

--- a/index.html
+++ b/index.html
@@ -94,7 +94,12 @@
       </div>
       <div class="home-hero__socials">
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a
+            target="_blank"
+            rel="noreferrer"
+            href="https://www.linkedin.com/in/mhoadley/"
+            class="home-hero__social-icon-link"
+          >
             <img
               src="./assets/png/linkedin-ico.png"
               alt="icon"
@@ -103,7 +108,12 @@
           </a>
         </div>
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a
+            target="_blank"
+            rel="noreferrer"
+            href="https://github.com/mhz1990"
+            class="home-hero__social-icon-link"
+          >
             <img
               src="./assets/png/github-ico.png"
               alt="icon"
@@ -352,14 +362,22 @@
               <span>Social</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="#">
+              <a
+                target="_blank"
+                rel="noreferrer"
+                href="https://www.linkedin.com/in/mhoadley/"
+              >
                 <img
                   class="main-footer__icon"
                   src="./assets/png/linkedin-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a
+                target="_blank"
+                rel="noreferrer"
+                href="https://github.com/mhz1990"
+              >
                 <img
                   class="main-footer__icon"
                   src="./assets/png/github-ico.png"
