adds RadicalX to projects minus picture

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 Hey guys! It's
                 <strong>Matt Hoadley</strong>, a
                 <strong> Full-Stack Software Developer </strong> and US Marine
-                located in Holland, MI. I have a passion for traveling and
+                based out of Holland, MI. I have a passion for traveling and
                 learning new things and am currently halfway through a masters
                 degree in cybersecurity. I've done
                 <strong> remote </strong>
@@ -216,6 +216,85 @@
           </span>
         </h2>
         <div class="projects__content">
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
+                src="./assets/png/Via.png"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">RadicalX</h3>
+              <p class="projects__row-content-desc">
+                RadicalX is an AI-powered web application made to help aspiring software developers learn the fundamentals. It uses ReX, a custom-built AI chatbot, to help users learn and practice coding concepts.
+              </p>
+              <div class="about__content-skills">
+                <h3 class="about__content-title">Tech Stack</h3>
+                <div class="skills">
+                  <div class="skills__skill">TensorFlow</div>
+                  <div class="skills__skill">Python</div>
+                  <div class="skills__skill">Machine Learning</div>
+                  <div class="skills__skill">Natural Language Processing (NLP)</div>
+                  <div class="skills__skill">Large Language Models (LLM)</div>
+                  <div class="skills__skill">Artificial Intelligence (AI)</div>
+                  <div class="skills__skill">Google Vertex AI</div>
+                  <div class="skills__skill">Vertex AI Vision</div>
+                  <div class="skills__skill">Generative AI</div>
+                </div>
+              </div>
+              <a
+                href="https://destination-dev.gitlab.io/module3-project-gamma/"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >See Via Live!</a
+              >
+            </div>
+          </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
+                src="./assets/png/Via.png"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Art Sphere Inc.</h3>
+              <p class="projects__row-content-desc">
+                Via is a live social media platform for sharing photos taken
+                with loved ones. Users can upload photos, input location
+                information, and access a global view to see their photos based
+                on where they took them. Via was developed as a 4-person
+                programming team.
+              </p>
+              <div class="about__content-skills">
+                <h3 class="about__content-title">Tech Stack</h3>
+                <div class="skills">
+                  <div class="skills__skill">JavaScript</div>
+                  <div class="skills__skill">Python</div>
+                  <div class="skills__skill">React</div>
+                  <div class="skills__skill">FastAPI</div>
+                  <div class="skills__skill">HTML</div>
+                  <div class="skills__skill">CSS</div>
+                  <div class="skills__skill">Git</div>
+                  <div class="skills__skill">Amazon AWS</div>
+                  <div class="skills__skill">Google Maps API</div>
+                  <div class="skills__skill">MongoDB</div>
+                  <div class="skills__skill">Docker</div>
+                  <div class="skills__skill">Bootstrap</div>
+                </div>
+              </div>
+              <a
+                href="https://destination-dev.gitlab.io/module3-project-gamma/"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >See Via Live!</a
+              >
+            </div>
+          </div>
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
