adds picture and updates content

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/png/Via.png"
+                src="./assets/png/RadicalX.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -228,27 +228,30 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">RadicalX</h3>
               <p class="projects__row-content-desc">
-                RadicalX is an AI-powered web application made to help aspiring software developers learn the fundamentals. It uses ReX, a custom-built AI chatbot, to help users learn and practice coding concepts.
+                RadicalX is an AI-powered tech tutor made to help aspiring software 
+                developers improve their skills of the trade. It uses ReX, a 
+                custom-built AI chatbot, to help users learn and practice coding 
+                concepts.
               </p>
               <div class="about__content-skills">
                 <h3 class="about__content-title">Tech Stack</h3>
                 <div class="skills">
-                  <div class="skills__skill">TensorFlow</div>
                   <div class="skills__skill">Python</div>
                   <div class="skills__skill">Machine Learning</div>
+                  <div class="skills__skill">Artificial Intelligence (AI)</div>
                   <div class="skills__skill">Natural Language Processing (NLP)</div>
                   <div class="skills__skill">Large Language Models (LLM)</div>
-                  <div class="skills__skill">Artificial Intelligence (AI)</div>
+                  <div class="skills__skill">Generative AI</div>
+                  <div class="skills__skill">TensorFlow</div>
                   <div class="skills__skill">Google Vertex AI</div>
                   <div class="skills__skill">Vertex AI Vision</div>
-                  <div class="skills__skill">Generative AI</div>
                 </div>
               </div>
               <a
-                href="https://destination-dev.gitlab.io/module3-project-gamma/"
+                href="https://www.radicalx.co/"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >See Via Live!</a
+                >See RadicalX Live!</a
               >
             </div>
           </div>
