--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
               >
             </div>
           </div>
-          <div class="projects__row">
+          <!-- <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
                 src="./assets/png/Via.png"
@@ -297,7 +297,7 @@
                 >See Via Live!</a
               >
             </div>
-          </div>
+          </div> -->
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
